WOLO-159 assign and revoke endpoints for user class(moderator), changes in user edit() method